--- a/style.css
+++ b/style.css
@@ -356,34 +356,11 @@ a:focus {
   color: var(--color-text)
 }
 
-.content {
+.content-wrap {
   display: flex;
   flex-direction: column;
-  width: 100vw;
-  height: calc(100vh - 13rem);
-  position: relative;
-  justify-content: flex-start;
-  align-items: center
 }
 
-.content__title {
-  font-size: 13vw;
-  color: var(--color-bgtext);
-  text-transform: uppercase;
-  margin: 0;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 700;
-  line-height: 1
-}
-
-.content__subtitle {
-  color: #c13535;
-  font-size: 7vw;
-  font-family: "Sacramento", cursive;
-  font-weight: 400;
-  margin: 0;
-  line-height: 1
-}
 
 @media screen and (min-width: 53em) {
   .message {
@@ -448,10 +425,6 @@ a:focus {
     pointer-events: auto
   }
 
-  .content {
-    height: 100vh;
-    justify-content: center
-  }
 }
 
 
@@ -503,6 +476,28 @@ nav a:hover::before {
   display: none !important;
 }
 .top-setcion{
-  width: 50%;
+  width: 100%;
   height: 100vh;
+}
+canvas{
+  z-index: -1 !important;
+}
+.content{
+
+  color:#cb333e;
+  text-align: center;
+  margin-top: 9rem;
+ 
+}
+.content__title{
+  width: fit-content;
+  font-weight: 700;
+  font-size: 95px;
+  display: flex;
+  margin: 0 auto;
+  /* background-color: #FFF; */
+  padding: 14px 45px;
+  border-radius: 8px;
+  /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
+  z-index: -60;
 }
