--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sacramento&display=swap');
 * {
     margin: 0;
     box-sizing: border-box;
@@ -486,18 +487,39 @@ canvas{
 
   color:#cb333e;
   text-align: center;
-  margin-top: 9rem;
- 
+  margin-top: 5.5rem;
+  z-index: -99;
 }
-.content__title{
+/* }
+/* .content__title{
   width: fit-content;
   font-weight: 700;
   font-size: 95px;
   display: flex;
-  margin: 0 auto;
+  margin: 0 auto; */
   /* background-color: #FFF; */
-  padding: 14px 45px;
-  border-radius: 8px;
+  /* padding: 14px 45px; */
+  /* border-radius: 8px; */
   /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
-  z-index: -60;
+  /* z-index: -60; */
+/* } */ 
+
+
+.content__title {
+  font-size: 12vw;
+  color: #cb333e;
+  text-transform: uppercase;
+  margin: 0;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+  line-height: 1;
+
+}
+.content__subtitle {
+  color:#cb333e;
+  font-size: 9vw;
+  font-family: 'Sacramento', cursive;
+  font-weight: 400;
+  margin: 0;
+  line-height: 1
 }
